[package]
name = "example"
version = "0.1.0"
authors = ["Michael Koukoullis <mike@kouky.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "settings"
path = "src/settings.rs"

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
rusoto_core = "0.46.0"
rusoto_sqs = "0.46.0"
rusoto_credential = "0.46.0"
log = "0.4"
env_logger = "0.8"
config = "0.11"
serde_derive = "1.0.126"
serde = "1.0.126"
rand = "0.8.4"
